<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_facebook" />

        <TextView
                android:id="@+id/login_status_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_status_facebook" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/login_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_twitter" />

        <TextView
                android:id="@+id/login_status_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_status_twitter" />

    </LinearLayout>

    <TextView
            android:id="@+id/login_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    <EditText
            android:id="@+id/postField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <Button
                android:id="@+id/postFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_facebook"></Button>

        <Button
                android:id="@+id/postTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post_twitter"></Button>

    </LinearLayout>

</LinearLayout>